Update swagger docs with Geofence and Beacon endpoints.
